--- a/templates/conventions/avenant_list.html
+++ b/templates/conventions/avenant_list.html
@@ -8,13 +8,13 @@
                     <div class="apilos-step-post-action--line"></div>
                 {% endif %}
             </div>
-            {% if convention|display_is_validated %}
+            {% if convention|display_redirect_post_action %}
                 <div class="fr-col-11">
                     <div class="fr-grid-row">
                         Avenant du <span class="fr-ml-1v"><strong> {{convention.cree_le|date:"d F Y"|default_if_none:'-' }} </strong></span>
                     </div>
                     <div class="fr-mb-3w">
-                        <a class="fr-link" href="{% url 'conventions:preview' convention_uuid=convention.uuid %}"> Voir le document</a>
+                        <a class="fr-link" href="{% url 'conventions:preview' convention_uuid=convention.uuid %}"> Voir en PDF</a>
                     </div>
                 </div>
             {% else %}
