--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -6,58 +6,72 @@
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
-        {% include "conventions/common/form_header.html"%}
-        {% include "common/nav_bar.html" with nav_bar_step="sent" %}
+        {% if convention.is_avenant %}
+            {% include "conventions/common/avenant_form_header.html"%}
+            <div class="fr-container">
+                {% if CERBERE_AUTH %}
+                    <a href="{% url 'programmes:operation_conventions' numero_operation=convention.programme.numero_galion %}">
+                        Retour à la convention
+                    </a>
+                {% else %}
+                    <a class='fr-link apilos-link' href="{% url 'conventions:post_action' convention_uuid=convention.parent.uuid %}">Retour à la convention</a>
+                {% endif %}
+            </div>
+        {% else %}
+            {% include "conventions/common/form_header.html"%}
+            {% include "common/nav_bar.html" with nav_bar_step="sent" %}
+        {% endif %}
         <div class="fr-container fr-py-5w">
             {% if request|is_instructeur %}
                 <div role="alert" class="fr-alert fr-alert--info fr-icon-arrow-right-s-line-double">
                     <p class="fr-alert__title">
-                        Téléverser la convention signée
+                        Téléverser {% if convention.is_avenant %}l'avenant signé{% else %}la convention signée{% endif %}
                     </p>
                     <p class="fr-mb-2w">
-                        Ici, vous pouvez téléverser votre convention signée afin qu'elle puisse être transmise.
+                        Ici, vous pouvez téléverser votre {% if convention.is_avenant %}avenant signé afin qu'il puisse être transmis.{% else %}convention signée afin qu'elle puisse être transmise.{% endif %}
                     </p>
-                    <div class="block--row-strech">
+                </p>
+                <div class="block--row-strech">
 
-                        <form method="post" action="" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
-                            {% csrf_token %}
-                            <input
-                                class="fileinput--hidden"
-                                type="file"
-                                id="{{upform.file.id_for_label}}"
-                                name="{{upform.file.html_name}}"
-                                accept="application/pdf">
-                            <div class="block--row-strech">
-                                <div>
-                                    <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
-                                        Téléverser la convention signée
-                                    </button>
-                                    {% for error in upform.file.errors %}
-                                        <p id="text-input-error-desc-error" class="fr-error-text">
-                                            {{ error }}
-                                        </p>
-                                    {% endfor %}
-                                </div>
+                    <form method="post" action="" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
+                        {% csrf_token %}
+                        <input
+                            class="fileinput--hidden"
+                            type="file"
+                            id="{{upform.file.id_for_label}}"
+                            name="{{upform.file.html_name}}"
+                            accept="application/pdf">
+                        <div class="block--row-strech">
+                            <div>
+                                <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
+                                    Téléverser {% if convention.is_avenant %}l'avenant signé{% else %}la convention signée{% endif %}
+                                </button>
+                                {% for error in upform.file.errors %}
+                                    <p id="text-input-error-desc-error" class="fr-error-text">
+                                        {{ error }}
+                                    </p>
+                                {% endfor %}
                             </div>
+                        </div>
 
-                            <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                document.getElementById('{{upform.file.id_for_label}}_upload_button').onclick = function() {
-                                    document.getElementById('{{upform.file.id_for_label}}').click();
-                                };
-                                document.getElementById('{{upform.file.id_for_label}}').onchange = function() {
-                                    var input = document.createElement('input');
-                                    input.setAttribute('type', 'hidden');//hidden input
-                                    input.setAttribute('name', 'Upload');//set the param name
-                                    input.setAttribute('value', 'True');//set the value
-                                    this.form.appendChild(input)
-                                    document.getElementById("{{upform.file.id_for_label}}_form").submit();
-                                }
-                            </script>
-                        </form>
-                        <a class="fr-my-1w fr-link fr-ml-2w" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
-                            Consulter le récapitulatif
-                        </a>
-                    </div>
+                        <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                            document.getElementById('{{upform.file.id_for_label}}_upload_button').onclick = function() {
+                                document.getElementById('{{upform.file.id_for_label}}').click();
+                            };
+                            document.getElementById('{{upform.file.id_for_label}}').onchange = function() {
+                                var input = document.createElement('input');
+                                input.setAttribute('type', 'hidden');//hidden input
+                                input.setAttribute('name', 'Upload');//set the param name
+                                input.setAttribute('value', 'True');//set the value
+                                this.form.appendChild(input)
+                                document.getElementById("{{upform.file.id_for_label}}_form").submit();
+                            }
+                        </script>
+                    </form>
+                    <a class="fr-my-1w fr-link fr-ml-2w" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
+                        Consulter le récapitulatif
+                    </a>
+                </div>
                 </div>
             {% else %}
                 <div role="alert" class="fr-alert fr-alert--success">
@@ -68,7 +82,7 @@
                     </a>
                 </div>
             {% endif %}
-            {% if convention|display_back_to_instruction:request %}
+            {% if not convention.is_avenant and convention|display_back_to_instruction:request %}
                 <div class="fr-col-12">
                     <div class="fr-mb-2w block--row-strech apilos-line-top">
                         {% include "conventions/actions/back_to_instruction.html" %}
