--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -30,58 +30,8 @@
                         {% include "comments/opened_comments.html" %}
                     </turbo-frame>
                 {% endif %}
-
+                {% include "conventions/recapitulatif/bailleur.html" %}
                 <div class="fr-grid-row fr-grid-row--gutters fr-mt-1w">
-                    <div class="fr-col-12">
-                        <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body fr-my-2w">
-                                <div class="block--row-strech" id="{{object_field}}_div">
-                                    <div class="block--row-strech-1">
-                                        <h4 class="fr-card__title">
-                                            Bailleur
-                                        </h4>
-                                    </div>
-                                    {% if convention|display_convention_form_progressbar %}
-                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                        </a>
-                                    {% endif %}
-                                </div>
-                                {% with bailleur_uuid=bailleur.uuid|slugify %}
-                                    <div class="fr-grid-row fr-grid-row--gutters">
-                                        <div class="fr-col-12 fr-col-lg-6">
-                                            <div class="fr-mb-2w">
-                                                <strong>{% include "common/display_field_if_exists.html" with value=bailleur.nom object_field="bailleur__nom__"|add:bailleur_uuid %}</strong>
-                                                <div class="fr-ml-3w">
-                                                    {% include "common/display_field_if_exists.html" with value=bailleur.adresse object_field="bailleur__adresse__"|add:bailleur_uuid %}
-                                                    <div class="fr-grid-row fr-grid-row--gutters">
-                                                        <div class="fr-col-6">
-                                                            {% include "common/display_field_if_exists.html" with value=bailleur.code_postal object_field="bailleur__code_postal__"|add:bailleur_uuid %}
-                                                        </div>
-                                                        <div class="fr-col-6">
-                                                            {% include "common/display_field_if_exists.html" with value=bailleur.ville object_field="bailleur__ville__"|add:bailleur_uuid %}
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div>
-                                                {% include "common/display_field_if_exists.html" with label="SIRET" value=bailleur.siret object_field="bailleur__siret__"|add:bailleur_uuid %}
-                                                {% include "common/display_field_if_exists.html" with label="Capital social" value=bailleur.capital_social object_field="bailleur__capital_social__"|add:bailleur_uuid %}
-                                            </div>
-                                        </div>
-                                        <div class="fr-col-12 fr-col-lg-6">
-                                            <p class="fr-my-1w"><strong>Signataire de la convention</strong></p>
-                                            <div class="fr-ml-3w">
-                                                {% include "common/display_field_if_exists.html" with value=convention.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
-                                                <em>{% include "common/display_field_if_exists.html" with value=convention.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}</em>
-                                                {% include "common/display_field_if_exists.html" with label="Date de délibération" value=convention.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
-                                            </div>
-                                        </div>
-                                    </div>
-                                {% endwith %}
-                            </div>
-                        </div>
-                    </div>
                     <div class="fr-col-12 fr-col-lg-6">
                         <div class="fr-card fr-card--no-arrow">
                             <div class="fr-card__body fr-my-2w">
@@ -279,80 +229,7 @@
                     </div>
                 </div>
 
-                <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-12 fr-col-lg-12">
-                        <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body fr-my-2w">
-                                <div class="block--row-strech" id="{{object_field}}_div">
-                                    <div class="block--row-strech-1">
-                                        <h4 class="fr-card__title">
-                                            Financements
-                                        </h4>
-                                    </div>
-                                    {% if convention|display_convention_form_progressbar %}
-                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:financement' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                        </a>
-                                    {% endif %}
-                                </div>
-                                <p class="fr-my-1w">Prêts & Subventions : </p>
-                                <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                                    <table>
-                                        <thead>
-                                            <tr>
-                                                {% if convention|display_comments %}
-                                                    {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Financements' callback_click="refresh_opened_comments" %}
-                                                {% endif %}
-                                                <th scope="col">Numéro</th>
-                                                <th scope="col">Date d'octroi</th>
-                                                <th scope="col">Durée (en années)</th>
-                                                <th scope="col">Montant (en €) {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col">Préteur</th>
-                                                <th scope="col">Préciser le prêteur si 'Autre'</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            {% for pret in convention.pret_set.all %}
-                                                {% with pret_uuid=pret.uuid|slugify %}
-                                                    {% with main_object_field="pret__uuid__"|add:pret_uuid %}
-                                                        <tr id="{{main_object_field}}_group">
-                                                            {% if convention|display_comments %}
-                                                                <td id="{{main_object_field}}_div">
-                                                                    {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Prêt ou financement" callback_click="refresh_opened_comments" %}
-                                                                </td>
-                                                            {% endif %}
-                                                            <td>
-                                                                {{ pret.numero|default_if_none:'-' }}
-                                                            </td>
-                                                            <td>
-                                                                {{ pret.date_octroi|default_if_none:'-' }}
-                                                            </td>
-                                                            <td>
-                                                                {{ pret.duree|default_if_none:'-' }}
-                                                            </td>
-                                                            <td>
-                                                                {{ pret.montant }}
-                                                            </td>
-                                                            <td>
-                                                                {{ pret.preteur }}
-                                                            </td>
-                                                            <td>
-                                                                {{ pret.autre }}
-                                                            </td>
-                                                        </tr>
-                                                    {% endwith %}
-                                                {% endwith %}
-                                            {% endfor %}
-                                        </tbody>
-                                    </table>
-                                </div>
-                                {% include "common/display_field_if_exists.html" with label="Date de fin de la convention" value=convention.date_fin_conventionnement object_field="convention__annee_fin_conventionnement__"|add:convention_uuid %}
-                                {% include "common/display_field_if_exists.html" with label="Fonds propres" value=convention.fond_propre object_field="convention__fond_propre__"|add:convention_uuid %}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+                {% include "conventions/recapitulatif/financements.html" %}
                 {% include "conventions/recapitulatif/logements.html" %}
                 {% include "conventions/recapitulatif/annexes.html" %}
 
