update: init service avenant_bailleur

--- a/templates/editorial/cgu.html
+++ b/templates/editorial/cgu.html
@@ -207,7 +207,7 @@
                 <p>Les sociétés Scalingo (hébergeur), Sendinblue (envoi emails) et Mailjet (envoi emails) interviennent en tant que sous-traitants. </p>
                 <div class="fr-table fr-p-2w" data-fr-js-table="true">
                     <table class="data-table" data-fr-js-table-element="true">
-                        <caption>Table des souss-traitants</caption>
+                        <caption>Table des sous-traitants</caption>
                         <thead>
                             <tr>
                                 <th scope="col">Partenaire</th>
