--- a/templates/conventions/avenant_recapitulatif.html
+++ b/templates/conventions/avenant_recapitulatif.html
@@ -21,7 +21,6 @@
         <input type="hidden" id="convention_uuid" value="{{convention.uuid}}">
         <div class="fr-container-fluid ds_banner">
             {% include "conventions/common/avenant_form_header.html"%}
-            {% include "common/step_progressbar.html"%}
             <div class="fr-container">
                 {% csrf_token %}
                 {% if convention|display_comments %}
@@ -63,11 +62,33 @@
 
                     {% include "conventions/actions/instructeur_validation.html" %}
 
-                    {% if 'logements' not in avenant_list %}
-                        pas de logements,
-                    {% endif %}
                     {% if 'bailleur' not in avenant_list %}
-                        pas de bailleur,
+                        <div class="fr-col-12 block--row-strech">
+                            <div class="block--row-strech-1 fr-mr-6w">
+                                <h2 class="fr-text--lg">Mettre à jour les informations du bailleur</h2>
+                                <p>Suite à une vente, un changement de gestionnaire, ou un changement de dénomination du propriétaire</p>
+                            </div>
+                            <form method="post">
+                                {% csrf_token %}
+                                <input value="{{avenant_types.bailleur}}" name="avenant_type" hidden>
+                                <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
+                            </form>
+                        </div>
+                        <hr>
+                    {% endif %}
+                    {% if 'logements' not in avenant_list %}
+                        <div class="fr-col-12 block--row-strech">
+                            <div class="block--row-strech-1 fr-mr-6w">
+                                <h2 class="fr-text--lg">Mettre à jour les logements</h2>
+                                <p>En cas de modification du programme, de travaux, de réhabilitation totale, ou d’une évolution des loyers.</p>
+                            </div>
+                            <form method="post">
+                                {% csrf_token %}
+                                <input value="{{avenant_types.logements}}" name="avenant_type" hidden>
+                                <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
+                            </form>
+                        </div>
+                        <hr>
                     {% endif %}
                     {% if 'duree' not in avenant_list %}
                         pas de durée
