--- a/templates/conventions/new_avenant.html
+++ b/templates/conventions/new_avenant.html
@@ -6,7 +6,7 @@
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/avenant_form_header.html" with convention=parent_convention %}
         <div class="fr-container fr-pb-5w">
-            <!-- <div class="fr-col-12 block--row-strech">
+            <div class="fr-col-12 block--row-strech">
                 <div class="block--row-strech-1 fr-mr-6w">
                     <h2 class="fr-text--lg">Mettre à jour les informations du bailleur</h2>
                     <p>Suite à une vente, un changement de gestionnaire, ou un changement de dénomination du propriétaire</p>
@@ -14,10 +14,10 @@
                 <form method="post">
                     {% csrf_token %}
                     <input value="{{avenant_types.bailleur}}" name="avenant_type" hidden>
-                <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
+                    <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
                 </form>
             </div>
-            <hr> -->
+            <hr>
             <div class="fr-col-12 block--row-strech">
                 <div class="block--row-strech-1 fr-mr-6w">
                     <h2 class="fr-text--lg">Mettre à jour les logements</h2>
