--- a/templates/conventions/recapitulatif/financements.html
+++ b/templates/conventions/recapitulatif/financements.html
@@ -18,6 +18,7 @@
                 <p class="fr-my-1w">Prêts & Subventions : </p>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
                     <table>
+                        <caption>Table des financements</caption>
                         <thead>
                             <tr>
                                 {% if convention|display_comments %}
