--- a/templates/index.html
+++ b/templates/index.html
@@ -60,12 +60,14 @@
                             <li>Générez la convention APL au format Cerfa en 1 clic</li>
                         </ul>
                     </div>
-                    <div class="fr-col-lg-4 fr-col-md-12 fr-mt-md-5w fr-mt-lg-10w">
-                        <a class="fr-btn fr-btn--secondary" href="{% url 'login' %}?instructeur=1">
-                            <span class="fr-icon-account-line fr-mr-1w" aria-hidden="true">
-                            </span>Instruire une convention
-                        </a>
-                    </div>
+                    {% if not CERBERE_AUTH %}
+                        <div class="fr-col-lg-4 fr-col-md-12 fr-mt-md-5w fr-mt-lg-10w">
+                            <a class="fr-btn fr-btn--secondary" href="{% url 'login' %}?instructeur=1">
+                                <span class="fr-icon-account-line fr-mr-1w" aria-hidden="true">
+                                </span>Instruire une convention
+                            </a>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
