--- a/templates/conventions/new_avenant.html
+++ b/templates/conventions/new_avenant.html
@@ -13,7 +13,7 @@
                 </div>
                 <form method="post">
                     {% csrf_token %}
-                    <input value="{{avenant_types.bailleur}}" name="avenant_type" hidden>
+                    <input type="hidden" value="bailleur" name="avenant_type">
                     <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
                 </form>
             </div>
@@ -25,11 +25,11 @@
                 </div>
                 <form method="post">
                     {% csrf_token %}
-                    <input value="{{avenant_types.logements}}" name="avenant_type" hidden>
+                    <input type="hidden" value="logements" name="avenant_type">
                     <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
                 </form>
             </div>
-            <!-- <hr>
+            <hr>
             <div class="fr-col-12 block--row-strech">
                 <div class="block--row-strech-1 fr-mr-6w">
                     <h2 class="fr-text--lg">Mettre à jour la durée de la convention</h2>
@@ -37,10 +37,10 @@
                 </div>
                 <form method="post">
                     {% csrf_token %}
-                    <input value="{{avenant_types.duree}}" name="avenant_type" hidden>
-                <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
+                    <input type="hidden" value="duree" name="avenant_type">
+                    <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
                 </form>
-            </div> -->
+            </div>
         </div>
     </div>
 {% endblock %}
