--- a/templates/conventions/logements.html
+++ b/templates/conventions/logements.html
@@ -16,11 +16,21 @@
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
 
+                {% if convention.is_avenant %}
+                    <div class="fr-grid-row fr-grid-row--gutters">
+                        <div class="fr-col-12 fr-mb-2w">
+                            {% include "common/form/input_number.html" with display_inline=True form_input=form.nb_logements object_field="lot__nb_logements__"|add:form.uuid.value %}
+                        </div>
+                    </div>
+                {% endif %}
+
                 {% include "conventions/common/form_logements.html"%}
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
-                        {% include "common/button/next_and_save.html" with suivant='conventions:logements' convention_uuid=convention.uuid %}
-                        {% include "common/button/previous.html" with precedent='conventions:financement' convention_uuid=convention.uuid %}
+                        {% include "common/button/next_and_save.html" %}
+                        {% if not convention.is_avenant %}
+                            {% include "common/button/previous.html" with precedent='conventions:financement' convention_uuid=convention.uuid %}
+                        {% endif %}
                     {% else %}
                         {% include "common/button/noteditable_button.html"%}
                     {% endif %}
