--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -19,8 +19,12 @@
                 {% include "conventions/common/form_annexes.html" %}
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
-                        {% include "common/button/next_and_save.html" with suivant='conventions:annexes' convention_uuid=convention.uuid %}
-                        {% include "common/button/previous.html" with precedent='conventions:logements' convention_uuid=convention.uuid %}
+                        {% include "common/button/next_and_save.html" %}
+                        {% if convention.is_avenant %}
+                            {% include "common/button/previous.html" with precedent='conventions:avenant_logements' convention_uuid=convention.uuid %}
+                        {% else %}
+                            {% include "common/button/previous.html" with precedent='conventions:logements' convention_uuid=convention.uuid %}
+                        {% endif %}
                     {% else %}
                         {% include "common/button/noteditable_button.html"%}
                     {% endif %}
