--- a/templates/conventions/comments.html
+++ b/templates/conventions/comments.html
@@ -26,8 +26,10 @@
 
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
-                        {% include "common/button/next_and_save.html" with suivant='conventions:comments' convention_uuid=convention.uuid %}
-                        {% include "common/button/previous.html" with precedent='conventions:stationnements' convention_uuid=convention.uuid %}
+                        {% include "common/button/next_and_save.html" %}
+                        {% if not convention.is_avenant %}
+                            {% include "common/button/previous.html" with precedent='conventions:stationnements' convention_uuid=convention.uuid %}
+                        {% endif %}
                     {% else %}
                         {% include "common/button/noteditable_button.html"%}
                     {% endif %}
