--- a/templates/conventions/programme.html
+++ b/templates/conventions/programme.html
@@ -81,7 +81,7 @@
                 {% include "common/required_fields_info.html" %}
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
-                        {% include "common/button/next_and_save.html" with suivant='conventions:programme' convention_uuid=convention.uuid %}
+                        {% include "common/button/next_and_save.html" %}
                         {% include "common/button/previous.html" with precedent='conventions:bailleur' convention_uuid=convention.uuid %}
                     {% else %}
                         {% include "common/button/noteditable_button.html"%}
