--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
-                    {% include "common/button/next_and_save.html" with suivant='conventions:selection' %}
+                    {% include "common/button/next_and_save.html" %}
                     <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
                         Revenir à la liste des conventions
                     </a>
