--- a/templates/conventions/new_avenant.html
+++ b/templates/conventions/new_avenant.html
@@ -6,41 +6,11 @@
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html" with convention=parent_convention %}
         <div class="fr-container fr-pb-5w">
-            <div class="fr-col-12 block--row-strech">
-                <div class="block--row-strech-1 fr-mr-6w">
-                    <h2 class="fr-text--lg">Mettre à jour les informations du bailleur</h2>
-                    <p>Suite à une vente, un changement de gestionnaire, ou un changement de dénomination du propriétaire</p>
-                </div>
-                <form method="post">
-                    {% csrf_token %}
-                    <input type="hidden" value="bailleur" name="avenant_type">
-                    <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
-                </form>
-            </div>
+            {% include "conventions/avenant/bailleur_update_start.html" %}
             <hr>
-            <div class="fr-col-12 block--row-strech">
-                <div class="block--row-strech-1 fr-mr-6w">
-                    <h2 class="fr-text--lg">Mettre à jour les logements</h2>
-                    <p>En cas de modification du programme, de travaux, de réhabilitation totale, ou d’une évolution des loyers.</p>
-                </div>
-                <form method="post">
-                    {% csrf_token %}
-                    <input type="hidden" value="logements" name="avenant_type">
-                    <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
-                </form>
-            </div>
+            {% include "conventions/avenant/logements_update_start.html" %}
             <hr>
-            <div class="fr-col-12 block--row-strech">
-                <div class="block--row-strech-1 fr-mr-6w">
-                    <h2 class="fr-text--lg">Mettre à jour la durée de la convention</h2>
-                    <p>En cas de nouveaux travaux financés</p>
-                </div>
-                <form method="post">
-                    {% csrf_token %}
-                    <input type="hidden" value="duree" name="avenant_type">
-                    <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
-                </form>
-            </div>
+            {% include "conventions/avenant/financement_update_start.html" %}
         </div>
     </div>
 {% endblock %}
