--- a/templates/conventions/recapitulatif/bailleur.html
+++ b/templates/conventions/recapitulatif/bailleur.html
@@ -10,9 +10,15 @@
                         </h4>
                     </div>
                     {% if convention|display_convention_form_progressbar %}
-                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                        </a>
+                        {% if convention.is_avenant %}
+                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:avenant_bailleur' convention_uuid=convention.uuid %}" >
+                                <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
+                            </a>
+                        {% else %}
+                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
+                                <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
+                            </a>
+                        {% endif %}
                     {% endif %}
                 </div>
                 {% with bailleur_uuid=bailleur.uuid|slugify %}
